<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="io.elpoisterio.smartlnmiit.activity.Login"
    android:background="@color/white"
    android:orientation="vertical">

<ImageView
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="48dp"
    android:paddingBottom="50dp"
    android:src="@drawable/full_logo"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        style="@style/MyTextInputLayout"
        android:layout_width="match_parent"

        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_email"
            style="@style/MyEditText"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        style="@style/MyTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/input_password"
            style="@style/MyEditText"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/login"
        style="@style/MyButton"
        android:background="@drawable/button_selector"
        android:elevation="8dp"
        android:fontFamily="sans-serif-medium"
        android:shadowRadius="18"
        android:text="@string/login"
        />
    <Button
        android:id="@+id/sign_up"
        style="@style/MyButton"
        android:text="@string/sign_up"
        android:background="@color/green_tint_appeals"
        android:textSize="@dimen/font_size_14sp" />
</LinearLayout>
