<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">




    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
        android:id="@+id/android_material_design_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Designation"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColorHint="@color/nero"
        app:met_floatingLabel="normal" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_title"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:textColorHint="@color/nero">

        <EditText
            android:id="@+id/input_title"
            style="@style/MyEditText"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/hint_title"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/nero">

        <EditText
            android:id="@+id/input_name"
            style="@style/MyEditText"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/hint_name"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/nero">

        <EditText
            android:id="@+id/input_email"
            style="@style/MyEditText"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/nero">

        <EditText
            android:id="@+id/input_password"
            style="@style/MyEditText"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_selector"
        android:elevation="8dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:shadowRadius="18"
        android:text="@string/sign_up"
        android:textColor="@color/white_text"
        android:textSize="@dimen/font_size_14sp" />
</LinearLayout>