<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_upload_grades"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@drawable/gradient_bg"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="io.elpoisterio.smartlnmiit.activity.UploadGrades"
    tools:showIn="@layout/activity_upload_grades">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Upload Grades"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:textStyle="bold"/>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_courseName"
        android:layout_width="match_parent"
        app:hintEnabled="false"
        android:textColor="#ffffff"
        android:layout_marginTop="48dp"
        style="@style/MyTextInputLayout"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/course_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MyEditText1"
            android:drawableLeft="@mipmap/ic_book_white_24dp"
            android:fontFamily="sans-serif-condensed"
            android:drawablePadding="12dp"
            android:textColorHint="#ffffff"
            android:textColor="#ffffff"
            android:background="@drawable/edittext_border"
            android:inputType="text"
            android:hint="@string/course_name" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/upload_grades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_batch"
        android:layout_marginTop="24dp"
        android:background="@color/grey"
        android:textColor="#ffffff"
        android:text="@string/upload_grades"

        />

    <Button
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_selector"
        android:elevation="8dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:shadowRadius="18"
        android:text="@string/send"
        android:textColor="@color/white_text"
        android:textSize="@dimen/font_size_14sp" />

</LinearLayout>
