<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:orientation="vertical">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Student Sign Up"
    android:textColor="#ffffff"
    android:textSize="24dp"
    android:layout_gravity="center"
    android:layout_marginTop="40dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_name"
        android:layout_width="match_parent"
        android:layout_marginTop="60dp"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        android:textColor="#ffffff"
        style="@style/MyTextInputLayout">

        <EditText
            android:id="@+id/input_name"
            style="@style/MyEditText"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/hint_name"
            android:drawableLeft="@mipmap/ic_face_white_24dp"
            android:drawablePadding="12dp"
            android:textColorHint="#ffffff"
            android:textColor="#ffffff"
            android:background="@drawable/edittext_border"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        app:hintEnabled="false"
        android:layout_marginTop="20dp"
        android:textColor="#ffffff"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_email"
            style="@style/MyEditText"
            android:fontFamily="sans-serif-condensed"
            android:drawableLeft="@mipmap/ic_email_white_24dp"
            android:drawablePadding="12dp"
            android:textColorHint="#ffffff"
            android:textColor="#ffffff"
            android:background="@drawable/edittext_border"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
    android:id="@+id/input_layout_password"
    android:layout_width="match_parent"
        app:hintEnabled="false"
        android:layout_marginTop="20dp"
        android:textColor="#ffffff"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_password"
            style="@style/MyEditText"
            android:background="@drawable/edittext_border"
            android:drawableLeft="@mipmap/ic_enhanced_encryption_white_24dp"
            android:drawablePadding="12dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />
    </android.support.design.widget.TextInputLayout>

    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
        android:id="@+id/android_material_design_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittext_border"
        android:drawableLeft="@mipmap/ic_local_library_white_24dp"
        android:drawablePadding="12dp"
        android:hint="Branch"
        android:textColorHint="#ffffff"
        app:met_baseColor="#ffffff"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="#ffffff"
        app:met_textColorHint="#ffffff"
        app:met_underlineColor="#ffffff" />


    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
        android:id="@+id/android_material_design_spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Course"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:met_textColorHint="#ffffff"
        app:met_primaryColor="#ffffff"
        app:met_underlineColor="#ffffff"
        android:drawablePadding="12dp"
        android:drawableLeft="@mipmap/ic_school_white_24dp"
        android:textColorHint="#ffffff"
        app:met_floatingLabel="highlight"
        app:met_baseColor="#ffffff"
        />



    <Button
        android:id="@+id/signup_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_selector"
        android:elevation="8dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:shadowRadius="18"
        android:text="@string/sign_up"
        android:textColor="@color/white_text"
        android:textSize="@dimen/font_size_14sp" />

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/AVLoadingIndicatorView"
        android:visibility="gone"
        android:layout_gravity="center"
        app:indicatorName="BallPulseIndicator"
        app:indicatorColor="#ffffff"
        />
</LinearLayout>